--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,9 +60,13 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
 
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0"
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 //    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
-
-    implementation 'com.jakewharton.timber:timber:4.7.1'
 
 }
