--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /.idea/misc.xml
 
 /.idea/*
+/app/src/main/java/hi/dude/movieinfochecker/test.http
+/app/src/main/java/hi/dude/movieinfochecker/test.json
