--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.github.flipkart-incubator:android-inline-youtube-view:1.0.3'
+
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 //    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
 
